@@ -2,6 +2,127 @@
 
 #include "tslog.h"
 
+static inline int64_t gui_sketch_nav_tree_get_root_diagram_id ( gui_sketch_nav_tree_t *this_ )
+{
+    assert( (*this_).ancestors_count <= GUI_SKETCH_NAV_TREE_CONST_MAX_ANCESTORS );
+    int64_t result;
+    
+    if ( (*this_).ancestors_count == 0 )
+    {
+        result = DATA_ID_VOID_ID;
+    }
+    else
+    {
+        result = data_diagram_get_id ( &((*this_).ancestor_diagrams[(*this_).ancestors_count-1]) );
+    }
+    
+    return result;
+}
+
+static inline gui_error_t gui_sketch_nav_tree_is_descendant ( gui_sketch_nav_tree_t *this_,
+                                                              int64_t probe_ancestor_id,
+                                                              int64_t probe_descendant_id,
+                                                              bool *out_is_descendant )
+{
+    assert( (*this_).ancestors_count <= GUI_SKETCH_NAV_TREE_CONST_MAX_ANCESTORS );
+    assert( (*this_).siblings_count <= GUI_SKETCH_NAV_TREE_CONST_MAX_SIBLINGS );
+    assert( (*this_).children_count <= GUI_SKETCH_NAV_TREE_CONST_MAX_CHILDREN );
+    
+    gui_error_t result;
+    
+    /* search the two ids in the diagram lists */
+    int_fast32_t probe_anc_in_anc_idx = -1;
+    int_fast32_t probe_anc_in_sib_idx = -1;
+    int_fast32_t probe_anc_in_child_idx = -1;
+    int_fast32_t probe_desc_in_anc_idx = -1;
+    int_fast32_t probe_desc_in_sib_idx = -1;
+    int_fast32_t probe_desc_in_child_idx = -1;
+    
+    for ( uint_fast32_t anc_idx = 0; anc_idx < (*this_).ancestors_count; anc_idx ++ )
+    {
+        if ( probe_ancestor_id == data_diagram_get_id ( &((*this_).ancestor_diagrams[anc_idx]) ) )
+        {
+            probe_anc_in_anc_idx = anc_idx;
+        }
+        if ( probe_descendant_id == data_diagram_get_id ( &((*this_).ancestor_diagrams[anc_idx]) ) )
+        {
+            probe_desc_in_anc_idx = anc_idx;
+        }
+    }
+    for ( uint_fast32_t sib_idx = 0; sib_idx < (*this_).siblings_count; sib_idx ++ )
+    {
+        if ( probe_ancestor_id == data_diagram_get_id ( &((*this_).sibling_diagrams[sib_idx]) ) )
+        {
+            probe_anc_in_sib_idx = sib_idx;
+        }
+        if ( probe_descendant_id == data_diagram_get_id ( &((*this_).sibling_diagrams[sib_idx]) ) )
+        {
+            probe_desc_in_sib_idx = sib_idx;
+        }
+    }
+    for ( uint_fast32_t child_idx = 0; child_idx < (*this_).children_count; child_idx ++ )
+    {
+        if ( probe_ancestor_id == data_diagram_get_id ( &((*this_).child_diagrams[child_idx]) ) )
+        {
+            probe_anc_in_child_idx = child_idx;
+        }
+        if ( probe_descendant_id == data_diagram_get_id ( &((*this_).child_diagrams[child_idx]) ) )
+        {
+            probe_desc_in_child_idx = child_idx;
+        }
+    }
+    
+    /* define the return value */
+    if (( probe_anc_in_anc_idx == -1 )&&( probe_anc_in_sib_idx == -1 )&&( probe_anc_in_child_idx == -1 ))
+    {
+        /* probe_ancestor_id not found */
+        result = GUI_ERROR_UNKNOWN_OBJECT;
+        *out_is_descendant = false;  /* avoid "uninitialzed" warnings */
+    }
+    else if (( probe_desc_in_anc_idx == -1 )&&( probe_desc_in_sib_idx == -1 )&&( probe_desc_in_child_idx == -1 ))
+    {
+        /* probe_descendant_id not found */
+        result = GUI_ERROR_UNKNOWN_OBJECT;
+        *out_is_descendant = false;  /* avoid "uninitialzed" warnings */
+    }
+    else
+    {
+        result = GUI_ERROR_NONE;
+        
+        if ( probe_anc_in_anc_idx != -1 )
+        {
+            if ( probe_desc_in_anc_idx != -1 )
+            {
+                *out_is_descendant = ( probe_anc_in_anc_idx > probe_desc_in_anc_idx ); /* root is last in list */
+            }
+            else 
+            {
+                assert( ( probe_desc_in_sib_idx != -1 )||( probe_desc_in_child_idx != -1 ) );
+                *out_is_descendant = true;
+            }
+        }
+        else if ( probe_anc_in_sib_idx != -1 )
+        {
+            if ( probe_desc_in_child_idx != -1 ) 
+            {
+                *out_is_descendant = ( probe_anc_in_sib_idx == (*this_).siblings_self_index );
+            }
+            else
+            {
+                assert( ( probe_desc_in_anc_idx != -1 )||( probe_desc_in_sib_idx != -1 ) );
+                *out_is_descendant = false;  /* probe_descendant_id is ancestor or sibling to probe_ancestor_id, not descendant */
+            }
+        }
+        else
+        {
+            assert ( probe_anc_in_child_idx != -1 );
+            *out_is_descendant = false;  /* probe_descendant_id is sibling or ancestor to probe_ancestor_id, not descendant */
+        }
+    }
+    
+    return result;
+}
+
 static inline shape_int_rectangle_t gui_sketch_nav_tree_get_bounds( gui_sketch_nav_tree_t *this_ )
 {
     return (*this_).bounds;
