@@ -1,4 +1,6 @@
 2018-12-xx 1.8.0 [xxxxxxx]
+  + in navigation mode, diagrams can be re-ordered by dragging their titles in the tree view
+  . F7 workaround removed, key F7 is without function now
   + in edit mode, features can be re-ordered, ports can be moved along the classifier border
   + ids of diagrams and classifiers are shown
 2018-11-21 1.7.1 [8ebf36a]
